<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <com.zhy.autolayout.AutoRelativeLayout
        style="@style/TitleBarRelative">

        <TextView
            style="@style/TitleBarRelativeMiddleText"
            android:text="@string/activity_login"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <EditText
        android:id="@+id/editUsername"
        android:layout_marginTop="150px"
        style="@style/EditInput"
        android:inputType="number"
        android:hint="@string/common_username_hint"/>
    <EditText
        android:id="@+id/editPassword"
        android:layout_marginTop="30px"
        style="@style/EditInput"
        android:inputType="textPassword"
        android:hint="@string/common_password_hint"/>
    <TextView
        android:id="@+id/textButtonForget"
        android:layout_marginTop="10px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:paddingTop="20px"
        android:paddingBottom="20px"
        android:gravity="end|right"
        android:textSize="24px"
        android:textColor="@color/text_gray_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_forget_password"/>
    <TextView
        android:id="@+id/textButtonLogin"
        android:layout_marginTop="200px"
        style="@style/TextButton"
        android:text="@string/activity_login"/>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:textSize="24px"
            android:textColor="@color/text_gray_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_register_hint"/>
        <TextView
            android:id="@+id/textButtonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24px"
            android:textColor="@color/text_red"
            android:text="@string/activity_login_register"/>
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>