<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textAlbum"
        style="@style/TextButton.White"
        android:text="@string/common_album"/>

    <TextView
        android:id="@+id/textCamera"
        android:layout_marginTop="10px"
        style="@style/TextButton.White"
        android:text="@string/common_camera"/>

    <TextView
        android:id="@+id/textCancel"
        android:layout_marginTop="20px"
        android:layout_marginBottom="10px"
        style="@style/TextButton.White"
        android:text="@string/common_cancel"/>

</com.zhy.autolayout.AutoLinearLayout>