<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoRelativeLayout
        style="@style/TitleBarRelative">
        <ImageView
            style="@style/TitleBarRelativeLeftImage"/>
        <TextView
            style="@style/TitleBarRelativeMiddleText"
            android:text="@string/activity_pay"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
        android:id="@+id/scrollView"
        style="@style/ScrollView"
        >
        <com.zhy.autolayout.AutoLinearLayout
            style="@style/ScrollViewRoot"
            android:paddingTop="15px">
            <!--********************************-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15px"
                android:paddingBottom="15px"
                android:paddingLeft="30px"
                android:paddingRight="30px"
                android:textColor="@color/text_black"
                android:textSize="26px"
                android:text="@string/activity_pay_length"/>
            <com.htlc.cyjk.app.widget.ScrollListView
                android:id="@+id/lengthListView"
                style="@style/ListView"
                android:divider="@null"
                android:choiceMode="singleChoice"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15px"
                android:paddingBottom="15px"
                android:paddingLeft="30px"
                android:paddingRight="30px"
                android:textColor="@color/text_black"
                android:textSize="26px"
                android:text="@string/activity_pay_way"/>
            <com.htlc.cyjk.app.widget.ScrollListView
                android:id="@+id/payListView"
                style="@style/ListView"
                android:divider="@null"
                android:choiceMode="singleChoice"/>
            <TextView
                style="@style/TextButton"
                android:text="@string/activity_pay_pay"/>
            <!--********************************-->
        </com.zhy.autolayout.AutoLinearLayout>
    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>
</com.zhy.autolayout.AutoLinearLayout>